# pluggy

./: MUJOCO_LOG.TXT  README.md  pyproject.toml
docs/: Parts.md  PluggyPlan.md  SimNotes.md
models/: playground.xml  pluggybot.xml  room_1.xml  world.xml
scripts/: stereo_snapshot.py  teleop.py  view.py
src/pluggybot/: __init__.py
src/pluggybot/odometry/: dead_reckoning.py
src/pluggybot/perception/: scanner.py
tests/: conftest.py  test_cameras.py  test_model.py  test_odometry.py
