[project]
name = "pluggybot"
version = "0.1.0"
description = "A simulated robot that plugs itself in using RL and other tools"
readme = "README.md"
authors = [
    { name = "Ben Holland", email = "benholland1024@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mujoco>=3.10.0",
    "numpy>=2.5.1",
    "pillow>=12.3.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
